@@ -1,4 +1,5 @@
 3.0.3
+ * maxPurgeableTimestamp needs to check memtables too (CASSANDRA-9949)
  * Update CQL documentation (CASSANDRA-10899)
  * Check the column name, not cell name, for dropped columns when reading
    legacy sstables (CASSANDRA-11018)
